[package]
name = "shimmy"
version = "0.1.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]
edition = "2018"
default-run = "shimmy"

[dependencies]
libc = "0.2"
log = "0.4"
nix = "0.15.0"
syslog = "5.0.0"

[[bin]]
name = "pipe"
path = "src/playground/pipe.rs"

[[bin]]
name = "signalfd"
path = "src/playground/signalfd.rs"

