[package]
name = "shimmy"
version = "0.1.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]
edition = "2018"
default-run = "shimmy"

[dependencies]
libc = "0.2"
log = "0.4"
nix = "0.15.0"
syslog = "5.0.0"

[[bin]]
name = "pipe1"
path = "src/playground/pipe1.rs"

[[bin]]
name = "pipe2"
path = "src/playground/pipe2.rs"

[[bin]]
name = "signalfd"
path = "src/playground/signalfd.rs"

