[package]
name = "shimmy"
version = "0.2.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]
edition = "2018"
default-run = "shimmy"

[dependencies]
chrono = "0.4"
libc = "0.2"
log = "0.4"
mio = "0.6"
nix = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
syslog = "5.0.0"

[[bin]]
name = "fifo1"
path = "src/playground/fifo1.rs"

[[bin]]
name = "pipe1"
path = "src/playground/pipe1.rs"

[[bin]]
name = "pipe2"
path = "src/playground/pipe2.rs"

[[bin]]
name = "signalfd"
path = "src/playground/signalfd.rs"

